tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/destinationrule/only_idletimeout_specified_in_DR/_test_context/DestinationRule.1492482509.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: idletimeout-dr
  namespace: echo-2-88348
spec:
  host: c
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 100s
    tls:
      mode: DISABLE
